--- a/NetBeansProjects/SimulatorForm/src/simulator/SimulatorForm.form
+++ b/NetBeansProjects/SimulatorForm/src/simulator/SimulatorForm.form
@@ -63,15 +63,17 @@
                                           <EmptySpace max="-2" attributes="0"/>
                                           <Component id="nextButton" max="32767" attributes="0"/>
                                       </Group>
-                                      <Component id="goButton" min="-2" pref="100" max="-2" attributes="0"/>
+                                      <Component id="goButton" pref="100" max="32767" attributes="0"/>
+                                      <Component id="playButton" max="32767" attributes="0"/>
+                                      <Component id="stopButton" max="32767" attributes="0"/>
                                   </Group>
                                   <EmptySpace min="-2" pref="74" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                           <Group type="102" attributes="0">
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="jSeparator1" min="-2" pref="226" max="-2" attributes="0"/>
-                                  <Component id="pNameLabel" alignment="1" min="-2" pref="226" max="-2" attributes="0"/>
+                                  <Component id="pNameLabel" min="-2" pref="226" max="-2" attributes="0"/>
+                                  <Component id="jSeparator1" alignment="1" min="-2" pref="226" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace max="-2" attributes="0"/>
                           </Group>
@@ -105,6 +107,10 @@
                           <Component id="previousButton" min="-2" max="-2" attributes="0"/>
                           <Component id="nextButton" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="playButton" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="stopButton" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="jSeparator1" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
@@ -210,6 +216,22 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="previousButtonActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="playButton">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Play"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="playButtonActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="stopButton">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Stop"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="stopButtonActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
